[package]
name = "tsk1183"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["from"] }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
rand = "0.8.5"
tempfile = "3.14.0"
